# mapo

./: .clang-format  .gitignore  CMakeLists.txt  README.md  vcpkg.json
assets/models/fat_cat/: fat_cat.mtl
assets/shaders/: compile.sh  point_light.frag  point_light.frag.spv  point_light.vert  point_light.vert.spv  simple_shader.frag  simple_shader.frag.spv  simple_shader.vert  simple_shader.vert.spv
cmake/modules/: FindGLFW3.cmake
core/: CMakeLists.txt  core.cpp  core.h  logging.cpp  logging.h  math.cpp  math.h  optional.h  pch.h  string.cpp  string.h  string_name.cpp  string_name.h  timer.cpp  timer.h  timestep.h  typedefs.h  uassert.h
core/input/: input.h  key_codes.h  mouse_codes.h
core/memory/: allocator.cpp  allocator.h  memory.h
core/string/: string.cpp  string.h  string_name.cpp  string_name.h
core/templates/: hash_map.h  hash_set.h
editor/: CMakeLists.txt  editor.cpp  editor.h  editor_app.cpp  editor_layer.cpp  editor_layer.h  scene_panel.cpp  scene_panel.h
editor/panel/: info_panel.cpp  info_panel.h  log_panel.cpp  log_panel.h  panel.cpp  panel.h  scene_panel.cpp  scene_panel.h
engine/: CMakeLists.txt  application.cpp  application.h  camera.cpp  camera.h  component.cpp  component.h  entry_point.h  game_object.cpp  game_object.h  keyboard_controller.cpp  keyboard_controller.h  layer.cpp  layer.h  layer_stack.cpp  layer_stack.h  model.cpp  model.h  scene.cpp  scene.h  utils.h  vulkan_buffer.cpp  vulkan_buffer.h  vulkan_descriptors.cpp  vulkan_descriptors.h  vulkan_device.cpp  vulkan_device.h  vulkan_frame_info.h  vulkan_pipeline.cpp  vulkan_pipeline.h  vulkan_renderer.cpp  vulkan_renderer.h  vulkan_swapchain.cpp  vulkan_swapchain.h  vulkan_window.cpp  vulkan_window.h  window.cpp  window.h
engine/event/: application_event.h  event.h  key_event.h  mouse_event.h
engine/input/: input.h
engine/render/: render_command.cpp  render_command.h  render_context.cpp  render_context.h  renderer.cpp  renderer.h  renderer_api.cpp  renderer_api.h  vulkan_buffer.cpp  vulkan_buffer.h  vulkan_descriptors.cpp  vulkan_descriptors.h  vulkan_device.cpp  vulkan_device.h  vulkan_frame_info.h  vulkan_pipeline.cpp  vulkan_renderer.cpp  vulkan_renderer.h  vulkan_window.cpp  vulkan_window.h
engine/renderer/: buffer.cpp  buffer.h  camera.cpp  camera.h  descriptors.cpp  descriptors.h  device.cpp  device.h  frame_info.h  pipeline.cpp  pipeline.h  render_context.cpp  render_context.h  renderer.cpp  renderer.h  swapchain.cpp  swapchain.h  vk_common.h
engine/scene/: component.cpp  component.h  editor_camera.cpp  editor_camera.h  game_object.cpp  game_object.h  scene.cpp  scene.h  scene_camera.cpp  scene_camera.h  script_rotate.h  scriptable.cpp  scriptable.h
engine/system/: imgui_system.cpp  imgui_system.h  point_light_system.cpp  point_light_system.h  rainbow_system.h  simple_render_system.cpp  simple_render_system.h
engine/ui/: imgui_layer.cpp  imgui_layer.h  imgui_utils.cpp  imgui_utils.h
learn/: main.cpp
learn_opengl/: CMakeLists.txt  learn_opengl.cpp
main/: CMakeLists.txt  editor_app.cpp  hello_app.cpp  hello_app.h  main.cpp
main-cpp/: CMakeLists.txt  main.cpp
platform/: CMakeLists.txt
platform/macos/: macos_input.cpp  macos_window.cpp  macos_window.h
platform/vulkan/: vulkan_buffer.cpp  vulkan_buffer.h  vulkan_descriptors.cpp  vulkan_descriptors.h  vulkan_device.cpp  vulkan_device.h  vulkan_frame_info.h  vulkan_pipeline.cpp  vulkan_pipeline.h  vulkan_render_context.cpp  vulkan_render_context.h  vulkan_renderer.cpp  vulkan_renderer_api.cpp  vulkan_renderer_api.h  vulkan_swapchain.cpp  vulkan_swapchain.h
